crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__memref__tests__alloc.snap
---
source: crates/tracel-mlir-rs/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloc = memref.alloc() : memref<index>
    memref.dealloc %alloc : memref<index>
    return
  }
}
