crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__memref__tests__atomic_rmw.snap
---
source: crates/tracel-mlir-rs/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloca = memref.alloca() : memref<10xf32>
    %cst = arith.constant 1.000000e+00 : f32
    %idx0 = index.constant 0
    %0 = memref.atomic_rmw addf %cst, %alloca[%idx0] : (f32, memref<10xf32>) -> f32
    return
  }
}
