crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__memref__tests__compile_global_with_options.snap
---
source: crates/tracel-mlir-rs/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  memref.global "private" constant @foo : memref<i64> = dense<42> {alignment = 8 : i64}
}
