crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__memref__tests__dim.snap
---
source: crates/tracel-mlir-rs/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloca = memref.alloca() : memref<1xindex>
    %idx0 = index.constant 0
    %dim = memref.dim %alloca, %idx0 : memref<1xindex>
    return
  }
}
