crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__memref__tests__extract_aligned_pointer_as_index.snap
---
source: crates/tracel-mlir-rs/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloca = memref.alloca() : memref<1xindex>
    %intptr = memref.extract_aligned_pointer_as_index %alloca : memref<1xindex> -> index
    return
  }
}
