crates/tracel-mlir-rs/src/dialect/snapshots/tracel_mlir_rs__dialect__memref__tests__load.snap
---
source: crates/tracel-mlir-rs/src/dialect/memref.rs
expression: module.as_operation()
---
module {
  func.func @foo() {
    %alloca = memref.alloca() : memref<index>
    %0 = memref.load %alloca[] : memref<index>
    return
  }
}
